--- a/DB/docker-compose.yml
+++ b/DB/docker-compose.yml
@@ -1,19 +1,27 @@
-version: '3.1'
+version: '3.4'
 
 services:
 
   mongo:
-    image: mongo:latest
+    hostname: mongo
     container_name: mongo
-    restart: always
+    image: mongo:latest
     environment:
-      MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_INITDB_DATABASE: request
+      MONGO_REPLICA_SET_NAME: rs0
     volumes:
-      - ./mongod.conf:/etc/mongod.conf
+      - ./mongo-initdb.d:/docker-entrypoint-initdb.d
+    expose:
+      - 27017
     ports:
       - "27017:27017"
-
+    restart: always
+    healthcheck:
+      test: test $$(echo "rs.initiate().ok || rs.slaveOk().ok || rs.status().ok" | mongo --quiet) -eq 1
+      interval: 10s
+      start_period: 30s
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "rs0" ]
+    
   mongo-express:
     image: mongo-express
     container_name: mongo-express
