--- a/DB/docker-compose.yml
+++ b/DB/docker-compose.yml
@@ -7,10 +7,10 @@ services:
     container_name: mongo
     image: mongo:latest
     environment:
-      MONGO_INITDB_DATABASE: request
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: root
+      MONGO_INITDB_DATABASE: code_remote
       MONGO_REPLICA_SET_NAME: rs0
-    volumes:
-      - ./mongo-initdb.d:/docker-entrypoint-initdb.d
     expose:
       - 27017
     ports:
