--- a/Discord/config.json
+++ b/Discord/config.json
@@ -1,1 +1,1 @@
-{"prefix":"!","token":"ODI2NDAyMzczMTYxMDU4MzA0.YGL9Lw.EizFfQxKeq1IZY-vQDfsY0AonDM","API_URL":"localhost","API_PORT":"8080"}
+{"prefix":"!","API_URL":"localhost","API_PORT":"8080"}
