--- a/Front/Angular Front/package.json
+++ b/Front/Angular Front/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "11.0.5",
     "@ng-bootstrap/ng-bootstrap": "6.0.0",
     "ace-builds": "^1.4.12",
+    "axios": "^0.21.1",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.29.1",
     "ng2-nouislider": "1.8.2",
@@ -40,7 +41,7 @@
     "@angular/language-service": "11.0.5",
     "@types/jasmine": "3.6.2",
     "@types/jasminewd2": "2.0.8",
-    "@types/node": "14.14.19",
+    "@types/node": "^14.14.19",
     "codelyzer": "6.0.1",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "6.0.0",
